--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         background-color: rgb(31, 29, 29);
     }
     .button-wrapper {
+         margin-top: 50%;
          display: flex;
          align-items: center;
          justify-content: center;
