--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: rgb(31, 29, 29);
+        height:100%;
     }
     .button-wrapper {
-         margin-top: 50%;
+         height:100%;
          display: flex;
          align-items: center;
          justify-content: center;
